Add note about relationship limit to taxii form.

--- a/taxii_service/templates/taxii_service_master_tab.html
+++ b/taxii_service/templates/taxii_service_master_tab.html
@@ -23,6 +23,9 @@
 					<em>Note:</em>
 				</strong> 
 				the current <strong class="required">{{type}}</strong> object is automatically included in the message.
+				<br/><br/>
+				<em>
+				Form options are capped by relationship count and result set size. <br/>Not all related items may appear.</em>
 			</div><br/>
 			<button id="taxii_submit" class="taxii_btn">Send</button>
 			<button id="taxii_preview" class="taxii_btn">Preview</button>
