--- a/chopshop_service/templates/chopshop_analysis.html
+++ b/chopshop_service/templates/chopshop_analysis.html
@@ -56,11 +56,7 @@
             {% endfor %}
             <td>
                 {% if result.result %}
-                    {% if result.subtype == 'Response Body MD5' or result.subtype == 'Request Body MD5' %}
-                        <a href="{% url 'crits.samples.views.samples_listing' %}?search_type=md5search&q={{result.result|urlencode}}">{{result.result}}</a>
-                    {% else %}
-                        <a href="{% url 'crits.samples.views.samples_listing' %}?search_type=detectexact&q={{result.result|urlencode}}">{{result.result}}</a>
-                    {% endif %}
+                    <a href="{% url 'crits.core.views.global_search_listing' %}?search_type=global&q={{result.result|urlencode}}">{{result.result}}</a>
                 {% endif %}
             </td>
         </tr>
