Adding support to relationships service for the Actors TLO.

--- a/relationships_service/templates/relationships_service_all_tab.html
+++ b/relationships_service/templates/relationships_service_all_tab.html
@@ -193,6 +193,7 @@ $(document).ready(function() {
             <input id="node_depth" size="3" type="text" value="3" name="depth" style="vertical-align: top;"></input>
         </div>
         <select id="node_types" name="types" size=11 multiple>
+            <option value="Actor" selected="selected">Actors</option>
             <option value="Campaign" selected="selected">Campaigns</option>
             <option value="Certificate" selected="selected">Certificates</option>
             <option value="Domain" selected="selected">Domains</option>
@@ -209,6 +210,7 @@ $(document).ready(function() {
     </div>
     <div id="draggable" class="ui-widget-content" style="display: none;">
         <ul id="graph_legend">
+            <li style="color: #000000;"><span style="color: #000;">Actors</span></li>
             <li style="color: #FF3737;"><span style="color: #000;">Campaigns</span></li>
             <li style="color: #FFA837;"><span style="color: #000;">Certificates</span></li>
             <li style="color: #33EB33;"><span style="color: #000;">Domains</span></li>
