--- a/relationships_service/templates/relationships_service_all_tab.html
+++ b/relationships_service/templates/relationships_service_all_tab.html
@@ -210,7 +210,7 @@ $(document).ready(function() {
     </div>
     <div id="draggable" class="ui-widget-content" style="display: none;">
         <ul id="graph_legend">
-            <li style="color: #000000;"><span style="color: #000;">Actors</span></li>
+            <li style="color: #900C0C;"><span style="color: #000;">Actors</span></li>
             <li style="color: #FF3737;"><span style="color: #000;">Campaigns</span></li>
             <li style="color: #FFA837;"><span style="color: #000;">Certificates</span></li>
             <li style="color: #33EB33;"><span style="color: #000;">Domains</span></li>
