Making select boxes not insanely huge.

--- a/relationships_service/templates/relationships_service_all_tab.html
+++ b/relationships_service/templates/relationships_service_all_tab.html
@@ -261,9 +261,9 @@ $(document).ready(function() {
         <button id="change_graph" style="vertical-align: top;">Update</button>
     </div>
     <div id="graph_actions" class="ui-widget-content" style="display: none;">
-        <select id="campaign_names" name="campaigns" size=11>
+        <select id="campaign_names" name="campaigns">
         </select>
-        <select id="confidence_values" name="confidence_values" size=3>
+        <select id="confidence_values" name="confidence_values">
             <option value="low" selected="selected">low</option>
             <option value="medium">medium</option>
             <option value="high">high</option>
