Add CybOX/STIX to TAXII service.
The code that was removed from core is now here in the TAXII service.
This adds the Nav menu item for "STIX Import" along with the form and
backend support for it. Object Mapper from core has been moved here and
references to it were changed. The "to_cybox*" and "to_stix*" code that
were part of the TLO classes are now functions in the handler file.

TAXII service also expands the API to continue support for STIX
importing through the API.

Once the core vocabularies change we will need to add enhancements for
mappings between the new vocabulary and the CybOX/STIX counterparts.

--- a/taxii_service/templates/taxii_service_nav_items.html
+++ b/taxii_service/templates/taxii_service_nav_items.html
@@ -2,3 +2,14 @@
 <li class='mmenu_item'>
     <a href="{% url 'taxii_service.views.taxii_agent' %}">TAXII Agent</a>
 </li>
+<li class='mmenu_item'>
+    <a href id="new-standards" class="dialogClick" dialog="new-standards" persona="new" title="Import STIX Document">STIX Import</a>
+</li>
+
+<script>
+    $(document).ready(function() {
+        stdDialog("new-standards", {title: "STIX Document"}, {
+            new: { open: file_upload_dialog, submit: defaultSubmit }
+        });
+    });
+</script>
