Chase down view name change.
indicator_from_obj became indicator_from_tlo, so chase it down here.

Noticed by: Chris Fry

--- a/threatgrid_service/templates/tg_service_template.html
+++ b/threatgrid_service/templates/tg_service_template.html
@@ -9,7 +9,7 @@
             'ind_type': ind_type,
             'obj_type': otype
         };
-        url = "{% url 'crits.indicators.views.indicator_from_obj' %}";
+        url = "{% url 'crits.indicators.views.indicator_from_tlo' %}";
         $.ajax({
             type: "POST",
             url: url,
