Add vis.js refs to the template for the rel service

--- a/relationships_service/templates/relationships_service_all_tab.html
+++ b/relationships_service/templates/relationships_service_all_tab.html
@@ -1,6 +1,12 @@
 {% load url from future %}
 
 <script src="/js/d3.v2.min.js"></script>
+
+<!-- vis.js components -->
+<link href="/css/vis.min.css" rel="stylesheet" type="text/css" />
+<script src="/js/vis.min.js"></script>
+<!-- vis.js components -->
+
 <script>
 
 $(document).ready(function() {
