--- a/taxii_service/templates/taxii_service_master_tab.html
+++ b/taxii_service/templates/taxii_service_master_tab.html
@@ -13,7 +13,7 @@
 	</div>
 
 	<section id="taxii_config_container" class="taxii-container">
-		<form id="taxii_config_form">
+		<form id="taxii_config_form">{% csrf_token %}
 			<table id="taxii_form_table">
 			</table>
 		</form>
