Proper fixes for dataminer and threatgrid as mentioned in #161

--- a/data_miner_service/templates/data_miner_service_template.html
+++ b/data_miner_service/templates/data_miner_service_template.html
@@ -93,14 +93,7 @@
             e.stopPropagation();
             var me = $(this);
             var value = me.attr('data-val');
-            var type = me.attr('data-type');
-            if (type == "Domain") {
-                ind_type = 'URI - Domain Name';
-            } else if (type == "IP Address") {
-                ind_type = 'Address - ipv4-addr';
-            } else if (type == "Email") {
-                ind_type = 'Address - email-addr';
-            }
+            var ind_type = me.attr('data-type');
             otype = "{{ subscription.type }}";
             create_indicator(otype, ind_type, value, me);
         });
@@ -109,13 +102,7 @@
             var value = me.attr('data-val');
             var type = me.attr('data-type');
             $('#raw_indicator_value').val(value);
-            if (type == "Domain") {
-                $('#raw_indicator_type').text('URI - Domain Name');
-            } else if (type == "IP Address") {
-                $('#raw_indicator_type').text('Address - ipv4-addr');
-            } else if (type == "Email") {
-                $('#raw_indicator_type').text('Address - email-addr');
-            }
+            $('#raw_indicator_type').text(type);
             $('#creation_result').text('');
             generate_dialog(me);
         });
