--- a/threatgrid_service/templates/tg_service_template.html
+++ b/threatgrid_service/templates/tg_service_template.html
@@ -74,15 +74,28 @@
             var me = $(this);
             var value = me.closest('tr').find('a').text();
             var type = me.attr('data-type');
+            if (type == "Domain") {
+                ind_type = 'URI - Domain Name';
+            } else if (type == "IP Address") {
+                ind_type = 'Address - ipv4-addr';
+            } else if (type == "Email") {
+                ind_type = 'Address - email-addr';
+            }
             otype = "{{ subscription.type }}";
-            create_indicator(otype, type, value, me);
+            create_indicator(otype, ind_type, value, me);
         });
         $(document).on('click', '.edit_raw_indicator', function(e) {
             var me = $(this);
             var value = me.closest('tr').find('a').text();
             var type = me.attr('data-type');
             $('#raw_indicator_value').val(value);
-            $('#raw_indicator_type').text(type);
+            if (type == "Domain") {
+                $('#raw_indicator_type').text('URI - Domain Name');
+            } else if (type == "IP Address") {
+                $('#raw_indicator_type').text('Address - ipv4-addr');
+            } else if (type == "Email") {
+                $('#raw_indicator_type').text('Address - email-addr');
+            }
             $('#creation_result').text('');
             generate_dialog(me);
         });
