--- a/taxii_service/templates/taxii_agent_results.html
+++ b/taxii_service/templates/taxii_agent_results.html
@@ -57,7 +57,7 @@
                     <ul>
                     {% for event in result.Event %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Event' event %}">{{ event }}</a>
+                            <a href="{% url 'crits.core.views.details' 'Event' event.0 %}">{{ event.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -69,7 +69,7 @@
                     <ul>
                     {% for certificate in result.Certificate %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Certificate' certificate %}">{{ certificate }}</a>
+                            <a href="{% url 'crits.core.views.details' 'Certificate' certificate.0 %}">{{ certificate.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -81,7 +81,7 @@
                     <ul>
                     {% for domain in result.Domain %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Domain' domain %}">{{ domain }}</a>
+                            <a href="{% url 'crits.core.views.details' 'Domain' domain.0 %}">{{ domain.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -93,7 +93,7 @@
                     <ul>
                     {% for email in result.Email %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Email' email %}">{{ email }}</a>
+                            <a href="{% url 'crits.core.views.details' 'Email' email.0 %}">{{ email.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -105,7 +105,7 @@
                     <ul>
                     {% for indicator in result.Indicator %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Indicator' indicator %}">{{ indicator }}</a>
+                            <a href="{% url 'crits.core.views.details' 'Indicator' indicator.0 %}">{{ indicator.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -117,7 +117,7 @@
                     <ul>
                     {% for ip in result.IP %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'IP' ip %}">{{ ip }}</a>
+                            <a href="{% url 'crits.core.views.details' 'IP' ip.0 %}">{{ ip.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -129,7 +129,7 @@
                     <ul>
                     {% for pcap in result.PCAP %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'PCAP' pcap %}">{{ pcap }}</a>
+                            <a href="{% url 'crits.core.views.details' 'PCAP' pcap.0 %}">{{ pcap.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -141,7 +141,7 @@
                     <ul>
                     {% for rd in result.RawData %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'RawData' rd %}">{{ rd }}</a>
+                            <a href="{% url 'crits.core.views.details' 'RawData' rd.0 %}">{{ rd.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
@@ -153,7 +153,7 @@
                     <ul>
                     {% for sample in result.Sample %}
                         <li>
-                            <a href="{% url 'crits.core.views.details' 'Sample' sample %}">{{ sample }}</a>
+                            <a href="{% url 'crits.core.views.details' 'Sample' sample.0 %}">{{ sample.1 }}</a>
                         </li>
                     {% endfor %}
                     </ul>
