TAXII: Improve feed decryption & TAXII version support

--- a/taxii_service/templates/taxii_server_config.html
+++ b/taxii_service/templates/taxii_server_config.html
@@ -87,6 +87,7 @@ $('#edit').click(function() {
                     $('#id_fid').val(data.fid);
                     $('#id_source').val(data.source);
                     $('#id_fcert').val(data.fcert);
+                    $('#id_fkey').val(data.fkey);
                     $('#id_subID').val(data.subID);
                 }
                 else {$('#error_box').text('Failed to edit feed.');}}});
