--- a/threatexchange/templates/tx_threat_descriptor.html
+++ b/threatexchange/templates/tx_threat_descriptor.html
@@ -1,12 +1,16 @@
 <table>
     <colgroup>
-        <col width="350px">
+        <col width="450px">
         <col width="300px">
         <col width="350px">
     </colgroup>
     <tr>
         <td>
             <table>
+                <colgroup>
+                    <col width="100px">
+                    <col width="350px">
+                </colgroup>
                 <tr>
                     <td><b>Indicator:</b></td>
                     <td>{{ data.raw_indicator }}</td>
